--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,25 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="mod.redemptionmod.installer"
+    package="mod.redemptionmod.installer.spice"
     android:versionCode="1"
-    android:versionName="1.0" >
-
+    android:versionName="0.01Alpha" 
+android:screenOrientation="portrait">
     <uses-sdk 
-        android:minSdkVersion="8" 
+        android:minSdkVersion="11" 
         android:targetSdkVersion="11" />
 
     <application
-        android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name" >
-        <activity
+        android:icon="@drawable/updater"
+        android:label="@string/app_name" 
+android:screenOrientation="portrait">
+		
+		<activity
             android:label="@string/app_name"
-            android:name=".MainActivity" >
+            android:name="MainActivity"
+			android:screenOrientation="portrait" >
+
             <intent-filter >
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-    </application>
+		<activity
+            android:label="@string/app_name"
+            android:name=".Activity2"
+			android:screenOrientation="portrait" >
 
+            <intent-filter >
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+		
+		<activity
+            android:label="@string/app_name"
+            android:name=".Activity3"
+			android:screenOrientation="portrait" >
+
+            <intent-filter >
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+    </application>
+	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+	<uses-permission android:name="android.permission.ACCESS_SUPERUSER"/>
 </manifest>
